translator_parser.go
// Code generated from Translator.g4 by ANTLR 4.7.1. DO NOT EDIT.

package main // Translator

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'INSERT INTO'", "'('", "')'", "'VALUES'", "','", "'SELECT'", "'FROM'",
	"'WHERE'", "'AVG'", "'HISTOGRAM'", "'='",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "WHITESPACE", "IDENTIFIER",
	"STRING_LITERAL",
}

var ruleNames = []string{
	"start", "insert1", "columns_list", "values_list", "select1", "set_list",
	"pair", "function", "from_list", "condition", "column", "value", "table_name",
	"attribute", "relation",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TranslatorParser struct {
	*antlr.BaseParser
}

func NewTranslatorParser(input antlr.TokenStream) *TranslatorParser {
	this := new(TranslatorParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Translator.g4"

	return this
}

// TranslatorParser tokens.
const (
	TranslatorParserEOF            = antlr.TokenEOF
	TranslatorParserT__0           = 1
	TranslatorParserT__1           = 2
	TranslatorParserT__2           = 3
	TranslatorParserT__3           = 4
	TranslatorParserT__4           = 5
	TranslatorParserT__5           = 6
	TranslatorParserT__6           = 7
	TranslatorParserT__7           = 8
	TranslatorParserT__8           = 9
	TranslatorParserT__9           = 10
	TranslatorParserT__10          = 11
	TranslatorParserWHITESPACE     = 12
	TranslatorParserIDENTIFIER     = 13
	TranslatorParserSTRING_LITERAL = 14
)

// TranslatorParser rules.
const (
	TranslatorParserRULE_start        = 0
	TranslatorParserRULE_insert1      = 1
	TranslatorParserRULE_columns_list = 2
	TranslatorParserRULE_values_list  = 3
	TranslatorParserRULE_select1      = 4
	TranslatorParserRULE_set_list     = 5
	TranslatorParserRULE_pair         = 6
	TranslatorParserRULE_function     = 7
	TranslatorParserRULE_from_list    = 8
	TranslatorParserRULE_condition    = 9
	TranslatorParserRULE_column       = 10
	TranslatorParserRULE_value        = 11
	TranslatorParserRULE_table_name   = 12
	TranslatorParserRULE_attribute    = 13
	TranslatorParserRULE_relation     = 14
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) Select1() ISelect1Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelect1Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelect1Context)
}

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(TranslatorParserEOF, 0)
}

func (s *StartContext) Insert1() IInsert1Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInsert1Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInsert1Context)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *TranslatorParser) Start() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TranslatorParserRULE_start)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(36)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case TranslatorParserT__5:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(30)
			p.Select1()
		}
		{
			p.SetState(31)
			p.Match(TranslatorParserEOF)
		}

	case TranslatorParserT__0:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(33)
			p.Insert1()
		}
		{
			p.SetState(34)
			p.Match(TranslatorParserEOF)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IInsert1Context is an interface to support dynamic dispatch.
type IInsert1Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInsert1Context differentiates from other interfaces.
	IsInsert1Context()
}

type Insert1Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInsert1Context() *Insert1Context {
	var p = new(Insert1Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_insert1
	return p
}

func (*Insert1Context) IsInsert1Context() {}

func NewInsert1Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Insert1Context {
	var p = new(Insert1Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_insert1

	return p
}

func (s *Insert1Context) GetParser() antlr.Parser { return s.parser }

func (s *Insert1Context) Table_name() ITable_nameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITable_nameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITable_nameContext)
}

func (s *Insert1Context) Columns_list() IColumns_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumns_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColumns_listContext)
}

func (s *Insert1Context) Values_list() IValues_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValues_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IValues_listContext)
}

func (s *Insert1Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Insert1Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Insert1Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterInsert1(s)
	}
}

func (s *Insert1Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitInsert1(s)
	}
}

func (p *TranslatorParser) Insert1() (localctx IInsert1Context) {
	localctx = NewInsert1Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TranslatorParserRULE_insert1)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(TranslatorParserT__0)
	}
	{
		p.SetState(39)
		p.Table_name()
	}
	{
		p.SetState(40)
		p.Match(TranslatorParserT__1)
	}
	{
		p.SetState(41)
		p.Columns_list()
	}
	{
		p.SetState(42)
		p.Match(TranslatorParserT__2)
	}
	{
		p.SetState(43)
		p.Match(TranslatorParserT__3)
	}
	{
		p.SetState(44)
		p.Match(TranslatorParserT__1)
	}
	{
		p.SetState(45)
		p.Values_list()
	}
	{
		p.SetState(46)
		p.Match(TranslatorParserT__2)
	}

	return localctx
}

// IColumns_listContext is an interface to support dynamic dispatch.
type IColumns_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsColumns_listContext differentiates from other interfaces.
	IsColumns_listContext()
}

type Columns_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyColumns_listContext() *Columns_listContext {
	var p = new(Columns_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_columns_list
	return p
}

func (*Columns_listContext) IsColumns_listContext() {}

func NewColumns_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Columns_listContext {
	var p = new(Columns_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_columns_list

	return p
}

func (s *Columns_listContext) GetParser() antlr.Parser { return s.parser }

func (s *Columns_listContext) AllColumn() []IColumnContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IColumnContext)(nil)).Elem())
	var tst = make([]IColumnContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IColumnContext)
		}
	}

	return tst
}

func (s *Columns_listContext) Column(i int) IColumnContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColumnContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IColumnContext)
}

func (s *Columns_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Columns_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Columns_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterColumns_list(s)
	}
}

func (s *Columns_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitColumns_list(s)
	}
}

func (p *TranslatorParser) Columns_list() (localctx IColumns_listContext) {
	localctx = NewColumns_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TranslatorParserRULE_columns_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Column()
	}
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TranslatorParserT__4 {
		{
			p.SetState(49)
			p.Match(TranslatorParserT__4)
		}
		{
			p.SetState(50)
			p.Column()
		}

		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IValues_listContext is an interface to support dynamic dispatch.
type IValues_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValues_listContext differentiates from other interfaces.
	IsValues_listContext()
}

type Values_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValues_listContext() *Values_listContext {
	var p = new(Values_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_values_list
	return p
}

func (*Values_listContext) IsValues_listContext() {}

func NewValues_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Values_listContext {
	var p = new(Values_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_values_list

	return p
}

func (s *Values_listContext) GetParser() antlr.Parser { return s.parser }

func (s *Values_listContext) AllValue() []IValueContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IValueContext)(nil)).Elem())
	var tst = make([]IValueContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IValueContext)
		}
	}

	return tst
}

func (s *Values_listContext) Value(i int) IValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValueContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *Values_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Values_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Values_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterValues_list(s)
	}
}

func (s *Values_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitValues_list(s)
	}
}

func (p *TranslatorParser) Values_list() (localctx IValues_listContext) {
	localctx = NewValues_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TranslatorParserRULE_values_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Value()
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TranslatorParserT__4 {
		{
			p.SetState(57)
			p.Match(TranslatorParserT__4)
		}
		{
			p.SetState(58)
			p.Value()
		}

		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISelect1Context is an interface to support dynamic dispatch.
type ISelect1Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelect1Context differentiates from other interfaces.
	IsSelect1Context()
}

type Select1Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelect1Context() *Select1Context {
	var p = new(Select1Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_select1
	return p
}

func (*Select1Context) IsSelect1Context() {}

func NewSelect1Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Select1Context {
	var p = new(Select1Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_select1

	return p
}

func (s *Select1Context) GetParser() antlr.Parser { return s.parser }

func (s *Select1Context) Set_list() ISet_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISet_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISet_listContext)
}

func (s *Select1Context) From_list() IFrom_listContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFrom_listContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFrom_listContext)
}

func (s *Select1Context) Condition() IConditionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConditionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConditionContext)
}

func (s *Select1Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Select1Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Select1Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterSelect1(s)
	}
}

func (s *Select1Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitSelect1(s)
	}
}

func (p *TranslatorParser) Select1() (localctx ISelect1Context) {
	localctx = NewSelect1Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TranslatorParserRULE_select1)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(TranslatorParserT__5)
	}
	{
		p.SetState(65)
		p.Set_list()
	}
	{
		p.SetState(66)
		p.Match(TranslatorParserT__6)
	}
	{
		p.SetState(67)
		p.From_list()
	}
	{
		p.SetState(68)
		p.Match(TranslatorParserT__7)
	}
	{
		p.SetState(69)
		p.Condition()
	}

	return localctx
}

// ISet_listContext is an interface to support dynamic dispatch.
type ISet_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSet_listContext differentiates from other interfaces.
	IsSet_listContext()
}

type Set_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySet_listContext() *Set_listContext {
	var p = new(Set_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_set_list
	return p
}

func (*Set_listContext) IsSet_listContext() {}

func NewSet_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Set_listContext {
	var p = new(Set_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_set_list

	return p
}

func (s *Set_listContext) GetParser() antlr.Parser { return s.parser }

func (s *Set_listContext) AllPair() []IPairContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IPairContext)(nil)).Elem())
	var tst = make([]IPairContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IPairContext)
		}
	}

	return tst
}

func (s *Set_listContext) Pair(i int) IPairContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPairContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IPairContext)
}

func (s *Set_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Set_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Set_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterSet_list(s)
	}
}

func (s *Set_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitSet_list(s)
	}
}

func (p *TranslatorParser) Set_list() (localctx ISet_listContext) {
	localctx = NewSet_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TranslatorParserRULE_set_list)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)
		p.Pair()
	}
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TranslatorParserT__4 {
		{
			p.SetState(72)
			p.Match(TranslatorParserT__4)
		}
		{
			p.SetState(73)
			p.Pair()
		}

		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IPairContext is an interface to support dynamic dispatch.
type IPairContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPairContext differentiates from other interfaces.
	IsPairContext()
}

type PairContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPairContext() *PairContext {
	var p = new(PairContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_pair
	return p
}

func (*PairContext) IsPairContext() {}

func NewPairContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PairContext {
	var p = new(PairContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_pair

	return p
}

func (s *PairContext) GetParser() antlr.Parser { return s.parser }

func (s *PairContext) Function() IFunctionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunctionContext)
}

func (s *PairContext) Attribute() IAttributeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttributeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAttributeContext)
}

func (s *PairContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PairContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PairContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterPair(s)
	}
}

func (s *PairContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitPair(s)
	}
}

func (p *TranslatorParser) Pair() (localctx IPairContext) {
	localctx = NewPairContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, TranslatorParserRULE_pair)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(79)
		p.Function()
	}
	{
		p.SetState(80)
		p.Match(TranslatorParserT__1)
	}
	{
		p.SetState(81)
		p.Attribute()
	}
	{
		p.SetState(82)
		p.Match(TranslatorParserT__2)
	}

	return localctx
}

// IFunctionContext is an interface to support dynamic dispatch.
type IFunctionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunctionContext differentiates from other interfaces.
	IsFunctionContext()
}

type FunctionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionContext() *FunctionContext {
	var p = new(FunctionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_function
	return p
}

func (*FunctionContext) IsFunctionContext() {}

func NewFunctionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionContext {
	var p = new(FunctionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_function

	return p
}

func (s *FunctionContext) GetParser() antlr.Parser { return s.parser }
func (s *FunctionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterFunction(s)
	}
}

func (s *FunctionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitFunction(s)
	}
}

func (p *TranslatorParser) Function() (localctx IFunctionContext) {
	localctx = NewFunctionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, TranslatorParserRULE_function)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		_la = p.GetTokenStream().LA(1)

		if !(_la == TranslatorParserT__8 || _la == TranslatorParserT__9) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IFrom_listContext is an interface to support dynamic dispatch.
type IFrom_listContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFrom_listContext differentiates from other interfaces.
	IsFrom_listContext()
}

type From_listContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFrom_listContext() *From_listContext {
	var p = new(From_listContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_from_list
	return p
}

func (*From_listContext) IsFrom_listContext() {}

func NewFrom_listContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *From_listContext {
	var p = new(From_listContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_from_list

	return p
}

func (s *From_listContext) GetParser() antlr.Parser { return s.parser }

func (s *From_listContext) Relation() IRelationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRelationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRelationContext)
}

func (s *From_listContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *From_listContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *From_listContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.EnterFrom_list(s)
	}
}

func (s *From_listContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TranslatorListener); ok {
		listenerT.ExitFrom_list(s)
	}
}

func (p *TranslatorParser) From_list() (localctx IFrom_listContext) {
	localctx = NewFrom_listContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 16, TranslatorParserRULE_from_list)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(86)
		p.Relation()
	}

	return localctx
}

// IConditionContext is an interface to support dynamic dispatch.
type IConditionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConditionContext differentiates from other interfaces.
	IsConditionContext()
}

type ConditionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionContext() *ConditionContext {
	var p = new(ConditionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TranslatorParserRULE_condition
	return p
}

func (*ConditionContext) IsConditionContext() {}

func NewConditionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConditionContext {
	var p = new(ConditionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TranslatorParserRULE_condition

	return p
}

func (s *ConditionContext) GetParser() antlr.Parser { return s.parser }

func (s *ConditionContext) Attribute() IAttributeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAttributeContext)(nil)).Elem(), 0)
